# AnyStyle

./: .gitignore  README.md  inference_style.py  inference_style_interp.py  pyproject.toml
assets/: wikiart_desc_generation.md
config/: main.yaml
config/dataset/: dl3dv.yaml
config/experiment/: dl3dv.yaml  dl3dv_aggregator.yaml  dl3dv_head.yaml
config/loss/: clip_dir.yaml  style.yaml
config/model/encoder/: anysplat.yaml
config/style_inference/: evaluate.yaml  evaluate_clipgaussian.yaml  interpolate.yaml
evaluation/: eval_artfid.py  eval_artscore_consistency_from_stylos.py  eval_histogan.py  eval_img.sh  eval_txt.sh  generate_test_images.py  image_metrics.py  inception.py  net.py  utils.py
evaluation/raft_core/: softsplat.py
evaluation/raft_core/utils/: flow_viz.py
src/: main.py  main_finetune.py
src/dataset/: __init__.py  data_module.py  data_sampler.py  dataset_dl3dv.py  dataset_re10k.py
src/longclip/checkpoints/: model_zoo.md
src/loss/: __init__.py  loss_clip.py  loss_depth_consis.py  loss_style.py
src/misc/: image_io.py
src/model/: model_wrapper.py  ply_export.py
src/model/encoder/: anysplat.py
src/model/encoder/backbone/croco/: blocks.py
src/model/encoder/heads/: vggt_dpt_gs_head.py  vggt_dpt_gs_head_cross_attention.py  vggt_dpt_gs_head_first_tests.py  vggt_dpt_gs_head_simple_injection.py
src/model/encoder/vggt/models/: aggregator.py  aggregator_injection.py
src/model/model/: anysplat.py
src/utils/: ba.py  image.py  misc.py  tensor_to_pycolmap.py  text_adapter_utils.py  vgg_model.py
src/utils/clip_utils/: __init__.py  image_utils.py  template.py
utils/: README.md  minicpm_script.py
